[gd_scene load_steps=3 format=3 uid="uid://bljcl3vwkfu63"]

[ext_resource type="Theme" uid="uid://dw65agedwcaxa" path="res://UITheme.tres" id="1_0tgn3"]
[ext_resource type="Script" uid="uid://4dtokl0t0upf" path="res://ui/OptionsMenu.gd" id="2_y6nhx"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0tgn3")
script = ExtResource("2_y6nhx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 8
columns = 2

[node name="MoveUpLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Up"

[node name="MoveUpButton" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "W"

[node name="MoveDownLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Down"

[node name="MoveDownButton" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "S"

[node name="MoveLeftLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Left"

[node name="MoveLeftButton" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "A"

[node name="MoveRightLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Right"

[node name="MoveRightButton" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "D"

[node name="InteractLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Interact"

[node name="InteractButton" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "E"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="SaveButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Save"

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Cancel"

[node name="KeyRemapDialog" type="PopupPanel" parent="."]
title = "Press a Key"
initial_position = 2
size = Vector2i(300, 136)
unresizable = false
borderless = false

[node name="VBoxContainer" type="VBoxContainer" parent="KeyRemapDialog"]
offset_left = 24.0
offset_top = 24.0
offset_right = 276.0
offset_bottom = 112.0
alignment = 1

[node name="Label" type="Label" parent="KeyRemapDialog/VBoxContainer"]
layout_mode = 2
text = "Press any key..."
horizontal_alignment = 1

[node name="CancelButton" type="Button" parent="KeyRemapDialog/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"
